--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "nuxt": "^2.0.0",
-    "vue-awesome-swiper": "^3.1.3"
+    "nuxt-gmaps": "^1.1.6",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.0.0",
