--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
+    "dotenv": "^8.2.0",
     "nuxt": "^2.0.0",
     "nuxt-gmaps": "^1.1.6",
     "vue-awesome-swiper": "^3.1.3",
