--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/pwa": "^3.0.0-beta.19",
     "dotenv": "^8.2.0",
     "nuxt": "^2.0.0",
     "nuxt-gmaps": "^1.1.6",
